--- a/finder.html
+++ b/finder.html
@@ -2,7 +2,7 @@
 
 <head>
 
-  <title>AI Video Surveillance</title>
+  <title>Object Finder</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -22,7 +22,8 @@
 <br>
 <h3>Object Name:</h3>
 <input type="text" class="form-control" id="obj_name" placeholder="Object you want it to detect"><br>
-<button class="btn btn-success">START</button>
+<button class="btn btn-success" onclick="start()">START</button><br>
+<h3>Status: <span id="status"></span></h3>
 
 </center>
 <script src="main.js"></script>
