--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-  <title>AI Video Surveillance</title>
+  <title>Object Finder</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
 
 <h1 style="font-size: 48px; font-weight: bold; font-family: 'Times New Roman', Times, serif;">AI OBJECT FINDER WEB APP</h1>
 <h3 style="font-size: 28px;">Lets Get Started</h3>
-<a class="btn btn-success" style="font-size: 22px; width: 20%;" href="finder.html">GO</a><br><br>
+<button class="btn btn-success" style="font-size: 22px; width: 20%;" onclick="nav()">GO</button><br><br>
 
 </div>
 
@@ -35,7 +35,7 @@
 
 </center>
 
-<script src="main.js"></script>
+<script src="index.js"></script>
 
 </body>
 
